--- a/web_chat_messenger/web_chat_messenger.csproj
+++ b/web_chat_messenger/web_chat_messenger.csproj
@@ -1,10 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
 	<PropertyGroup>
-		<TargetFramework>netcoreapp3.1</TargetFramework>
+		<TargetFramework>net6.0</TargetFramework>
 		<AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
 	</PropertyGroup>
-
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.App" />
